# earthsense25tutorial

./: 00_setup.ipynb  01_stac_and_zarr.ipynb  02_EOFM_intro.md  03_EOFM_finetuning.ipynb  README.md  index.md  myst.yml  pyproject.toml
