[project]
name = "earthsense25tutorial"
version = "0.1.0"
description = "EarthSense 2025 tutorial: GeoAI in the Cloud"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "adlfs==2024.7.0",
    "dask==2024.11.2",
    "earthaccess==0.14.0",
    "einops==0.8.1",
    "fsspec==2024.10.0",
    "geopandas==1.0.1",
    "huggingface-hub==0.34.4",
    "jupyterlab==4.4.7",
    "matplotlib==3.9.2",
    "numcodecs==0.15.1",
    "numpy==2.1.3",
    "odc-stac==0.3.10",
    "planetary-computer==1.0.0",
    "pyarrow==18.0.0",
    "pystac-client==0.8.5",
    "python-box==7.3.2",
    "rasterio==1.4.2",
    "rasterstats==0.20.0",
    "rioxarray==0.18.1",
    "scikit-learn==1.7.2",
    "torch==2.7.0",
    "torchvision==0.22.0",
    "xarray==2024.11.0",
    "zarr==2.18.3",
]

[project.optional-dependencies]
docs = [
    "jupyter-book>=2.0.0b0",
]
